Minor fixes (icons not stretch, button text color)

--- a/src/scss/_map.scss
+++ b/src/scss/_map.scss
@@ -3,6 +3,7 @@
     &-with-photo {
       border: 4px solid var(--color-light);
       border-radius: 50%;
+      object-fit: cover;
     }
 
     &-cluster {
